@@ -1,4 +1,4 @@
 #Abator build version info
-#Mon Jan 28 13:05:36 CST 2008
+#Tue Feb 05 12:11:25 CST 2008
 version=1.1.0
-buildNum=401
+buildNum=402
