@@ -69,17 +69,34 @@ element of the <a href="table.html">&lt;table&gt;</a> element.</p>
           </table>
         </td>
   </tr>
-  <tr>
-    <td>identity</td>
-    <td>If <code>true</code>, then the generated <code>&lt;selectKey&gt;</code> element will be placed
-        after the insert (for an identity column).  If <code>false</code>, then
-        the generated <code>&lt;selectKey&gt;</code> will be placed before the insert
-        (typically for a sequence).</td>
-  </tr>
 </table>
 
 <h2>Optional Attributes</h2>
-<p>None</p>
+<table border="1" cellspacing="0" cellpadding="5">
+  <tr>
+    <th>Attribute</th>
+    <th>Description</th>
+  </tr>
+  <tr>
+    <td valign="top">identity</td>
+    <td>If <code>true</code>, then the column is flagged as an identity column and the
+        generated <code>&lt;selectKey&gt;</code> element will be placed
+        after the insert (for an identity column).  If <code>false</code>, then
+        the generated <code>&lt;selectKey&gt;</code> will be placed before the insert
+        (typically for a sequence).
+        <p><b>Important:</b> Even if you specify the <code>type</code> attribute as "post",
+           you should still specify this value as "true" for identity columns.  This will flag
+           Abator to remove the column from the insert list.</p>
+        <p>The default is <i>false</i>.</p></td>
+  </tr>
+  <tr>
+    <td valign="top">type</td>
+    <td>If specified, then this value will be added as the type of the generated <code>&lt;selectKey&gt;</code> element.
+        The value of this property should be either "pre" or "post".
+        <p><b>Important:</b> if a value is specified for this attribute, then the generated
+        <code>&lt;selectKey&gt;</code> element will always be placed before the insert statement.</p></td>
+  </tr>
+</table>
 
 <h2>Child Elements</h2>
 <p>None</p>
