@@ -281,6 +281,31 @@ specified with the <a href="property.html">&lt;property&gt;</a> child element:</
         <p><i>The default value is false.</i></p></td>
   </tr>
   <tr>
+    <td valign="top">rootClass</td>
+    <td>This property can be used to specify a root class for all generated
+      Java model objects.  Abator will specify this value as the super class
+      of the primary key object, if the table has a primary key, or the
+      record object otherwise.  The value specified in this property will override
+      the <code>rootClass</code> property set on the Java Model Generator
+      configuration if any is set.
+      <p><b>Important:</b> Abator does not verify that the class exists, or is a
+       valid Java class.  The generated classes may override elements in this
+       class without warning.</p>
+      <p>If specified, the value of this property should be a fully qualified
+       class name (like com.mycompany.MyRootClass).</p></td>
+  </tr>
+  <tr>
+    <td valign="top">rootInterface</td>
+    <td>This property can be used to specify a super interface for all generated
+      DAO interface objects. The value specified in this property will override
+      the <code>rootInterface</code> property set on the DAO Generator
+      configuration if any is set.
+      <p><b>Important:</b> Abator does not verify that the interface exists, or is a
+       valid Java interface.</p>
+      <p>If specified, the value of this property should be a fully qualified
+       interface name (like com.mycompany.MyRootInterface).</p></td>
+  </tr>
+  <tr>
     <td valign="top">runtimeTableName</td>
     <td>If you specify a value for this property, than Abator will use that
         value as the table name in the generated SQL rather than the <code>tableName</code>
