@@ -96,6 +96,12 @@
   <li>Exposed new support for selecting tables and/or contexts to the
       command line and the Ant task - this has added an advanced syntax to the command
       line for Abator.</li>
+  <li><code>rootClass</code> and <code>rootInterface</code> may now be specified for each table.
+      See the <a href="configreference/table.html">&lt;table&gt;</a>
+      reference page for more information.</li>
+  <li>Allowed specifying a type (pre or post) for the generated key element.  See the
+      <a href="configreference/generatedKey.html">&lt;generatedKey&gt;</a>
+      reference page for more information</li>
 </ul>
 
 <h2>Version 1.0.0</h2>
